# dr-kube

./: .dockerignore  .env.secret.example  .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  Dockerfile.dev  Makefile  README 2.md  README.md  docker-compose.yml  main.txt  pdf.html
.claude/: CLAUDE.md  (+1 more)
agent/: .dockerignore  .env.example  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  QUICKSTART_KR.md  README.md  SUMMARY.md  WINDOWS_SETUP.md  cli.py  pyproject.toml  requirements.txt  run.bat
agent/delivery_agent/: __init__.py  graph.py  nodes.py  policy.py  prompts.py  schemas.py  state.py  tools.py
agent/dr_kube/: __init__.py  _shared_state.py  converter.py  github.py  graph.py  llm.py  prompts.py  slack.py  state.py  tools.py  verifier.py  watcher.py  webhook.py
agent/issues/: README.md  sample_app_crash.json  sample_configmap_missing.json  sample_cpu_throttle.json  sample_image_pull.json  sample_latency.json  sample_liveness_probe_fail.json  sample_network_policy.json  sample_node_not_ready.json  sample_oom.json  sample_rbac_permission.json  sample_replicas_mismatch.json
agent/jh/: run_tools.bat  setup.bat
agent/jh/issues/: sample_dns_resolution.json  sample_pvc_pending.json
agent/jh/src/: requirements.txt
agent/jh/src/dr_kube/: llm.py  prompts.py  state.py
agent/src/: .env.example  README.md  cli.py
agent/src/dr_kube/: __init__.py  argocd.py  graph.py  llm.py  prompts.py  state.py
agent/tests/: sample_alertmanager_payload.json  sample_inventory_latency.json  sample_msa_cascade_payload.json
agent/tools/: README.md  git_action.py  root_cause_analyzer.py
(+344 files in other folders)
